[package]
name = "patchjuggler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.25.0"
rand = "0.8.5"
zerocopy = "0.7.32"
zerocopy-derive = "0.7.32"

[[bin]]
name = "sender"

[[bin]]
name = "receiver"
